Tugas Akhir PDKP

--- a/Alprog/Tugas/indexasli.html
+++ b/Alprog/Tugas/indexasli.html
@@ -16,7 +16,7 @@ Released   : 20090303
 <title>Premium Series by Free CSS Templates</title>
 <meta name="keywords" content="" />
 <meta name="Premium Series" content="" />
-<link href="default.css" rel="stylesheet" type="text/css" media="screen" />
+<link href="default.css" rel="stylesheet" type="text/css" media="screen" /> <link rel="stylesheet" type="text/css" href="custom.css">
 </head>
 <body>
 <!-- start header -->
